decode left ont bit

--- a/encode/Makefile
+++ b/encode/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-finline-functions -Wall -Wextra -O2 -lm
+CFLAGS=-finline-functions -Wall -Wextra -O2
 
 .SUFFIXS: .c
 encode: main.o huffman.o rbtree.o
@@ -10,4 +10,4 @@ encode: main.o huffman.o rbtree.o
 	${CC} $< ${CFLAGS} -c
 .PHONY: clean
 clean:
-	@rm -rf *.o output
+	@rm -rf *.o output encode
